--- a/main.html
+++ b/main.html
@@ -8,6 +8,9 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="sizeInfo">
+		<h1>Width: <span id="width">x</span> and Height: <span id="height">y</span></h1>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
